ADD: Socket.io로 실시간 알림 받기 기능, FIX: Socket.io 유저 인증 버그